# model_api_connection

./: .env.example  .gitignore  README.md  _fetch_helpers.py  example.py  fetch_models.py  gemini_uploader.py  key_sync.py  model_connector.py  models_config.json  paths.py  pyproject.toml  requirements.txt  test_models.py  usage_log.py  video_connector.py
cli/: llm_stats.py
docs/superpowers/plans/: 2026-04-19-1p-key-sync.md  2026-04-20-connector-singleton-and-raw.md  2026-04-20-llm-usage-logging.md
docs/superpowers/specs/: 2026-04-19-1p-key-sync-redesign.md  2026-04-20-connector-singleton-and-raw-design.md  2026-04-20-llm-usage-logging-design.md
model_connector/: __init__.py  config.py  models_config.json
tests/: test_config_loader.py  test_connector.py  test_gemini_uploader.py  test_key_sync.py  test_llm_stats.py  test_missing_key_error.py  test_model_connector_loading.py  test_usage_log.py  test_usage_log_integration.py  test_video_connector.py
