[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "model-api-connection"
version = "0.1.0"
description = "Lightweight, config-driven Python connector for multiple LLM providers (OpenAI, Anthropic, Gemini, SiliconFlow, Poe)"
requires-python = ">=3.10"
dependencies = [
    "litellm>=1.40.0",
    "python-dotenv>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools]
py-modules = ["model_connector"]

[tool.setuptools.package-data]
"*" = ["models_config.json"]
