[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "model-api-connection"
version = "0.1.0"
description = "Lightweight, config-driven Python connector for multiple LLM providers (OpenAI, Anthropic, Gemini, SiliconFlow, Poe)"
requires-python = ">=3.10"
dependencies = [
    "litellm>=1.40.0",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
llm-stats = "cli.llm_stats:main"
llm-sync-keys = "key_sync:main"

[tool.setuptools]
py-modules = ["model_connector", "video_connector", "gemini_uploader", "usage_log", "paths", "key_sync"]
packages = ["cli"]

[tool.setuptools.package-data]
"*" = ["models_config.json"]
